--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,22 @@
 version: '3.8'
-
 services:
-  web:
-    build: .
+  php:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8082:80"   # CMS will now run at localhost:8082 to avoid conflict with Jenkins
+      - "8000:80"  # Changed to avoid Jenkins on 8080
     volumes:
-      - ./src:/var/www/html
+      - .:/var/www/html
     depends_on:
-      - db
-    networks:
-      - cmsnet
-
-  db:
-    image: mysql:5.7
+      - mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: cms_db
-    ports:
-      - "3307:3306"
-    volumes:
-      - db_data:/var/lib/mysql
+      - MYSQL_HOST=mysql  # Placeholder, will adjust
     networks:
-      - cmsnet
-
+      - cms-network
+  # Remove mysql and phpmyadmin services since they exist
 volumes:
-  db_data:
-
+  # No mysql-data volume needed if reusing existing MySQL
 networks:
-  cmsnet:
+  cms-network:
+    driver: bridge
