--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,15 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8000:80"  # Changed to avoid Jenkins on 8080
+      - "8000:80"
     volumes:
       - .:/var/www/html
     depends_on:
       - mysql
     environment:
-      - MYSQL_HOST=mysql  # Placeholder, will adjust
+      - MYSQL_HOST=mysql  # Will adjust to existing MySQL IP/port later
     networks:
       - cms-network
-  # Remove mysql and phpmyadmin services since they exist
-volumes:
-  # No mysql-data volume needed if reusing existing MySQL
 networks:
   cms-network:
     driver: bridge
