--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     volumes:
       - .:/var/www/html
     environment:
-      - MYSQL_HOST=host.docker.internal 
-      - MYSQL_PORT=3307
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=rootpassword
-      - MYSQL_DATABASE=cms_db
+      - MYSQL_PASSWORD=root
+      - MYSQL_DATABASE=cms
     networks:
       - cms-network
 
