--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - .:/var/www/html
     environment:
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=172.21.0.2
       - MYSQL_PORT=3306
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
